--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,11 @@
 	<div class="inner">
 		<!--<section>-->
 			<form action="https://formspree.io/{{ site.email }}" method="POST">
-				<div class="field half first">
+				<div class="field">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" />
 				</div>
-				<div class="field half">
+				<div class="field">
 					<label for="email">Email</label>
 					<input type="text" name="_replyto" id="email" />
 				</div>
