--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -1,5 +1,5 @@
 {% if 'posts' == site.tiles-source %}
-    {% assign tiles = site.posts | sort: 'date' %}
+    {% assign tiles = site.posts | sort: 'order' %}
 {% elsif 'pages' == site.tiles-source %}
     {% assign tiles = site.html_pages | where_exp: "item", "item.show_tile != false" %}
 {% endif %}
