--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <!-- Contact -->
-<section id="contact2">
+<section id="contact">
 	<div class="inner">
 		<!--<section>-->
 			<form action="https://formspree.io/f/mayznrde" method="POST" style="width: 100%;">
