--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,8 @@
 		        <li><a href="{{ "" | absolute_url }}">{{ page.title }}</a></li>
 	    	{% endif %}
 		{% endfor %}
-		{% for page in site.html_pages %}
+		{% assign pages = site.html_pages | sort: "order" %}
+		{% for page in pages %}
 		    {% if page.layout != "home" and page.nav-menu == true %}
 		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 		    {% endif %}
@@ -30,3 +31,5 @@
 	</ul>
 	-->
 </nav>
+
+
